# cloistr

./: .gitignore  ALGORITHM.md  Cargo.toml  README.md  TOY.md  prepare_reference.py  pyproject.toml
controls/: .gitignore
encode/: Cargo.toml  README.md
encode/src/: gmm.rs  main.rs  output.rs  pca.rs  prepare.rs  reference.rs  vcf.rs
match/: Cargo.toml
match/src/: features.rs  integration_tests.rs  main.rs  pipeline.rs  refine.rs
match/src/io/: query.rs  summary_json.rs
scripts/: build_db_pack.py  build_ref_pack.py  plink_pca.sh  plot_gmm_overlay.py
sim/: README.md  config.yml  simulate.py  simulate_db.py  subset_query.py  toy.config.yml
